[package]
edition = "2021"
name = "sam"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
embassy-embedded-hal = { version = "0.2.0", rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-sync = { version = "0.6.0", rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
embassy-executor = { version = "0.6.2", rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git", features = ["task-arena-size-98304", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.3.2", rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.2.0", rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-net = { version = "0.4.0", rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "tcp", "udp", "dhcpv4"] }
embassy-futures = { version = "0.1.0", rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git" }
cyw43 = { version = "0.2.0", rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.2.0", rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git", features = ["defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"
assign-resources = { git = "https://github.com/adamgreig/assign-resources", rev = "94ad10e2729afdf0fd5a77cd12e68409a982f58a" }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
heapless = { version = "0.8", features = ["defmt-03"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }
ssd1306 = { version = "0.9.0" }
serde-json-core = { version = "0.6.0", features = ["defmt"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"

[patch.crates-io]
embassy-executor = { rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git" }
embassy-sync = { rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git" }
embassy-futures = { rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git" }
embassy-time-driver = { rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git" }
embassy-embedded-hal = { rev = "8b9b3ecd0fd6b8d6", git = "https://github.com/embassy-rs/embassy.git" }
